# Safety-First-Customer-Support-Triage-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  README.md  demo_phase1.py  docker-compose.yml  main.py  pyproject.toml
data/: pii_test_cases.json
data/evaluation/: test_set_v1.json
data/knowledge_base/faqs/: billing_faqs.json  feature_faqs.json  general_faqs.json  technical_faqs.json
data/knowledge_base/policies/: account_policy.md  billing_policy.md  subscription_policy.md
data/templates/: response_templates.json
docs/: architectural_decisions.md  data_card.md  deployment.md
evaluation/: README.md  baseline_metrics.json.example  eval_metrics.py  regression_detector.py  run_evaluation.py
scripts/: ingest_knowledge_base.py
src/: __init__.py  config.py  decision_router.py  escalation.py  generation.py  intent_classifier.py  logging_config.py  models.py  output_validator.py  pii_redactor.py  retrieval.py  risk_scorer.py  vector_store.py
src/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/api/: __init__.py  main.py
src/monitoring/: __init__.py  alert_thresholds.py  cost_tracker.py  metrics_collector.py
src/prompts/: classification_prompt.py
tests/: __init__.py  test_pii_redaction.py
tests/agent/: test_graph_flow.py  test_graph_nodes.py  test_routing_parity.py  test_tools.py
tests/integration/: __init__.py  test_full_flow.py  test_safety_guarantees.py
